fix: horizontal scrolling on mobile

--- a/components/index.scss
+++ b/components/index.scss
@@ -112,7 +112,9 @@
 			.links-wrapper {
 				position: absolute;
 				top: 0;
+				left: 0;
 				width: 100%;
+				max-width: 100vw;
 				z-index: 2;
 				align-items: flex-end;
 				padding-left: 0;
